# purplesky-fix

./: .gitignore  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-custom-domain.yml  deploy.yml
adapters/static/: vite.config.ts
lexicons/: app.artsky.artboard.json  app.purplesky.collab.project.json  app.purplesky.consensus.vote.json  app.purplesky.forum.post.json  app.purplesky.forum.reply.json  app.purplesky.forum.wiki.json
public/: sw.js
scripts/: ssg.mjs
src/: entry.preview.tsx  entry.ssr.tsx  global.css  root.tsx
src/app/: App.tsx  FeedView.tsx  PostCard.tsx  PostDetailView.tsx  app.css  main.tsx
src/components/action-buttons/: action-buttons.css  action-buttons.tsx
src/components/app-link/: app-link.tsx
src/components/comment-thread/: comment-thread.css  comment-thread.tsx
src/components/compose-modal/: compose-modal.css  compose-modal.tsx
src/components/composer-suggestions/: composer-suggestions.css  composer-suggestions.tsx
src/components/feed-selector/: feed-selector.tsx
src/components/follow-bell/: follow-bell.css  follow-bell.tsx
src/components/post-card/: post-card.css  post-card.tsx
src/context/: app-context.tsx
src/layouts/: Layout.astro
src/lib/: artboards.ts  bsky.ts  collab.ts  constellation.ts  forum.ts  image-utils.ts  oauth.ts  path.ts  types.ts  wasm-bridge.ts
src/pages/: 404.astro  index.astro
src/routes/: feed.css  index.tsx  layout.css  layout.tsx
src/routes/artboards/: index.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
(+9 files in other folders)
